# compactionbench

./: .gitignore  CITATION.cff  EXPECTED_RESULTS.json  FINDINGS.md  LICENSE  README.md  RELEASE.md  eval.py  pyproject.toml  reproduce.sh
.github/workflows/: validate-policy-pr.yml
compactbench/: __init__.py  engine.py  policies.py
compactbench/tasks/: accumulate.py  stateful.py
frozen/: splits.json
scripts/: combine_algebra_panel.py  combine_refetch_k_sweep.py  freeze_splits.py  run_algebra_refetch_3b.sh  run_precondition_3b.sh  run_refetch_k4_3b.sh  run_refetch_k_sweep_t0.sh  run_v1_baseline_3b.sh  run_v1_task_instruction_3b.sh  validate_results.py  validate_submission.py
tests/: test_policy_invariants.py  test_submission_schema.py
